cf_analysis_results/checkerframework_3.42.0_results/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8.txt
../dataset/june2020_dataset/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/FileReaderPipe.java:19: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(input) $$ java.io.FileReader $$ possible exceptional exit due to bufferedReader.readLine() with exception type java.io.IOException $$ ( 497, 518 ) $$ @MustCall method close may not have been invoked on new FileReader(input) or any of its aliases.
			BufferedReader bufferedReader = new BufferedReader(new FileReader(input));
			                                                   ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to bufferedReader.readLine() with exception type java.io.IOException
Note: ../dataset/june2020_dataset/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
